# ring-ml-person-detector

./: .dockerignore  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  main.py  pyproject.toml
.github/: renovate-bot.json5  renovate.json5
.github/workflows/: publish.yaml  renovate.yaml  test-build.yaml
.taskfiles/: check.yaml  docker.yaml  pre-commit.yaml  test.yaml
.taskfiles/pre-commit/: Taskfile.yaml
config/: configuration.yaml
src/: config.py  inference.py  model.py
