[project]
name = "ring-ml-person-detector"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "fastapi==0.116.1",
  "python-multipart==0.0.20",
  "ultralytics==8.3.174",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.7.1",
  "torchvision==0.22.1",
]
cuda = [
  "torch==2.7.1",
  "torchvision==0.22.1",
]
xpu = [
  "torch==2.7.1",
  "torchvision==0.22.1",
  "pytorch-triton-xpu==3.3.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-cuda", extra = "cuda" },
  { index = "torch-xpu", extra = "xpu" },
]
torchvision = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-cuda", extra = "cuda" },
  { index = "torch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = [
  { index = "torch-xpu", extra = "xpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[dependency-groups]
dev = [
  "basedpyright==1.31.1",
  "pylint==3.3.7",
  "ruff==0.12.7",
]

[tool.basedpyright]
typeCheckingMode = "strict"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.MESSAGES_CONTROL]
disable = ["fixme"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "FIX",  # flake8-fixme
  "TD",   # flake8-todo
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
]
