[project]
name = "ring-ml-person-detector"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "fastapi==0.120.0",
  "python-multipart==0.0.20",
  "ultralytics==8.3.221",
  "uvicorn==0.38.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.8.0+cpu",
  "torchvision==0.23.0+cpu",
]
cuda = [
  "torch==2.8.0+cu128",
  "torchvision==0.23.0+cu128",
]
xpu = [
  "torch==2.8.0+xpu",
  "torchvision==0.23.0+xpu",
  "pytorch-triton-xpu==3.4.0",
]

[tool.uv]
environments = [
  "sys_platform == 'linux'",
]

conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "xpu" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-cuda", extra = "cuda" },
  { index = "torch-xpu", extra = "xpu" },
]
torchvision = [
  { index = "torch-cpu", extra = "cpu" },
  { index = "torch-cuda", extra = "cuda" },
  { index = "torch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = [
  { index = "torch-xpu", extra = "xpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[dependency-groups]
dev = [
  "basedpyright==1.32.1",
  "ruff==0.14.2",
]

[tool.basedpyright]
# TODO: switch to "recommended"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "COM812",  # trailing comma missing - conflicts with formatter
  "FIX",  # flake8-fixme
  "TD",   # flake8-todo
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
]
